tests/cmd_sd_bad.out
./cmd_sd_bad.svx:4:16: error: Expecting numeric field, found "metres"
./cmd_sd_bad.svx:5:15: error: Unknown units "furlongs"
./cmd_sd_bad.svx:6:15: error: Unknown units "furlongs"
./cmd_sd_bad.svx:7:5: error: Unknown quantity "tripe"
./cmd_sd_bad.svx:8:15: error: Expecting numeric field, found "tripe"
./cmd_sd_bad.svx:9:22: error: Invalid units "meters" for quantity
./cmd_sd_bad.svx:10:5: error: Unknown quantity ""

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 0 warning(s) and 7 error(s) - no output files produced.
